// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StafferPage renders html correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={Object {}}
    stafferInfo={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              createStaffer={[Function]}
              editStaffer={null}
              fetchStafferInfo={[Function]}
              id="create-staffer-form"
              isCreateForm={true}
              onSubmit={[Function]}
              organizationName=""
              sourceInfo={Object {}}
              stafferInfo={Object {}}
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            undefined,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={Object {}}
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                <hr />,
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={Object {}}
                />,
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "createStaffer": [Function],
                  "editStaffer": null,
                  "fetchStafferInfo": [Function],
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": undefined,
                  "onSubmit": [Function],
                  "organizationName": "",
                  "sourceInfo": Object {},
                  "stafferInfo": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={Object {}}
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              undefined,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={Object {}}
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  <hr />,
                  <ReduxForm
                    createStaffer={[Function]}
                    editStaffer={null}
                    fetchStafferInfo={[Function]}
                    id="create-staffer-form"
                    isCreateForm={true}
                    onSubmit={[Function]}
                    organizationName=""
                    sourceInfo={Object {}}
                    stafferInfo={Object {}}
                  />,
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "createStaffer": [Function],
                    "editStaffer": null,
                    "fetchStafferInfo": [Function],
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": undefined,
                    "onSubmit": [Function],
                    "organizationName": "",
                    "sourceInfo": Object {},
                    "stafferInfo": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders html correctly when given a referrer 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={
      Object {
        "referrer": "/course/11111111-1111-1111-111111111111",
      }
    }
    stafferInfo={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <StatusAlert
            alertType="info"
            className=""
            dismissible={true}
            iconClassNames={Array []}
            id="sent-from-edit-course-info"
            message="The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information."
            onClose={[Function]}
            title={null}
          />
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              createStaffer={[Function]}
              editStaffer={null}
              fetchStafferInfo={[Function]}
              id="create-staffer-form"
              isCreateForm={true}
              onSubmit={[Function]}
              organizationName=""
              sourceInfo={
                Object {
                  "referrer": "/course/11111111-1111-1111-111111111111",
                }
              }
              stafferInfo={Object {}}
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            <StatusAlert
              alertType="info"
              className=""
              dismissible={true}
              iconClassNames={Array []}
              id="sent-from-edit-course-info"
              message="The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information."
              onClose={[Function]}
              title={null}
            />,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={
                  Object {
                    "referrer": "/course/11111111-1111-1111-111111111111",
                  }
                }
                stafferInfo={Object {}}
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alertType": "info",
              "className": "",
              "dismissible": true,
              "iconClassNames": Array [],
              "id": "sent-from-edit-course-info",
              "message": "The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information.",
              "onClose": [Function],
              "title": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                <hr />,
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={
                    Object {
                      "referrer": "/course/11111111-1111-1111-111111111111",
                    }
                  }
                  stafferInfo={Object {}}
                />,
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "createStaffer": [Function],
                  "editStaffer": null,
                  "fetchStafferInfo": [Function],
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": undefined,
                  "onSubmit": [Function],
                  "organizationName": "",
                  "sourceInfo": Object {
                    "referrer": "/course/11111111-1111-1111-111111111111",
                  },
                  "stafferInfo": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <StatusAlert
              alertType="info"
              className=""
              dismissible={true}
              iconClassNames={Array []}
              id="sent-from-edit-course-info"
              message="The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information."
              onClose={[Function]}
              title={null}
            />
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={
                  Object {
                    "referrer": "/course/11111111-1111-1111-111111111111",
                  }
                }
                stafferInfo={Object {}}
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              <StatusAlert
                alertType="info"
                className=""
                dismissible={true}
                iconClassNames={Array []}
                id="sent-from-edit-course-info"
                message="The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information."
                onClose={[Function]}
                title={null}
              />,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={
                    Object {
                      "referrer": "/course/11111111-1111-1111-111111111111",
                    }
                  }
                  stafferInfo={Object {}}
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alertType": "info",
                "className": "",
                "dismissible": true,
                "iconClassNames": Array [],
                "id": "sent-from-edit-course-info",
                "message": "The data you entered on the course edit screen is saved. You will return to that page when you have finished updating instructor information.",
                "onClose": [Function],
                "title": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  <hr />,
                  <ReduxForm
                    createStaffer={[Function]}
                    editStaffer={null}
                    fetchStafferInfo={[Function]}
                    id="create-staffer-form"
                    isCreateForm={true}
                    onSubmit={[Function]}
                    organizationName=""
                    sourceInfo={
                      Object {
                        "referrer": "/course/11111111-1111-1111-111111111111",
                      }
                    }
                    stafferInfo={Object {}}
                  />,
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "createStaffer": [Function],
                    "editStaffer": null,
                    "fetchStafferInfo": [Function],
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": undefined,
                    "onSubmit": [Function],
                    "organizationName": "",
                    "sourceInfo": Object {
                      "referrer": "/course/11111111-1111-1111-111111111111",
                    },
                    "stafferInfo": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly while creating 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isSaving": true,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              createStaffer={[Function]}
              editStaffer={null}
              fetchStafferInfo={[Function]}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={true}
              onSubmit={[Function]}
              organizationName=""
              sourceInfo={Object {}}
              stafferInfo={
                Object {
                  "error": null,
                  "isSaving": true,
                }
              }
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            undefined,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={
                  Object {
                    "error": null,
                    "isSaving": true,
                  }
                }
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                <hr />,
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={
                    Object {
                      "error": null,
                      "isSaving": true,
                    }
                  }
                />,
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "createStaffer": [Function],
                  "editStaffer": null,
                  "fetchStafferInfo": [Function],
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": true,
                  "onSubmit": [Function],
                  "organizationName": "",
                  "sourceInfo": Object {},
                  "stafferInfo": Object {
                    "error": null,
                    "isSaving": true,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={true}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={
                  Object {
                    "error": null,
                    "isSaving": true,
                  }
                }
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              undefined,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={true}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={
                    Object {
                      "error": null,
                      "isSaving": true,
                    }
                  }
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  <hr />,
                  <ReduxForm
                    createStaffer={[Function]}
                    editStaffer={null}
                    fetchStafferInfo={[Function]}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={true}
                    onSubmit={[Function]}
                    organizationName=""
                    sourceInfo={Object {}}
                    stafferInfo={
                      Object {
                        "error": null,
                        "isSaving": true,
                      }
                    }
                  />,
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "createStaffer": [Function],
                    "editStaffer": null,
                    "fetchStafferInfo": [Function],
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": true,
                    "onSubmit": [Function],
                    "organizationName": "",
                    "sourceInfo": Object {},
                    "stafferInfo": Object {
                      "error": null,
                      "isSaving": true,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly while fetching 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={Object {}}
    stafferInfo={
      Object {
        "error": null,
        "isFetching": true,
        "isSaving": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <LoadingSpinner
            message="Loading…"
          />
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <LoadingSpinner
              message="Loading…"
            />,
            undefined,
            false,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "message": "Loading…",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          undefined,
          false,
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <LoadingSpinner
              message="Loading…"
            />
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <LoadingSpinner
                message="Loading…"
              />,
              undefined,
              false,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "message": "Loading…",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
            false,
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with no stafferInfo 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={Object {}}
    stafferInfo={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "alertType": "danger",
      "className": "",
      "dismissible": false,
      "iconClassNames": Array [],
      "id": "error",
      "message": "Could not get instructor information",
      "onClose": [Function],
      "title": "Could not load page",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "alertType": "danger",
        "className": "",
        "dismissible": false,
        "iconClassNames": Array [],
        "id": "error",
        "message": "Could not get instructor information",
        "onClose": [Function],
        "title": "Could not load page",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`StafferPage renders page correctly with staffer info error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StafferPage
    createStaffer={[Function]}
    editStaffer={null}
    fetchStafferInfo={[Function]}
    sourceInfo={Object {}}
    stafferInfo={
      Object {
        "error": Array [
          "Fail",
        ],
        "isSaving": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <title>
            Create New Instructor
          </title>
        </HelmetWrapper>,
        <PageContainer
          className=""
          wide={false}
        >
          <div>
            <h2>
              Create New Instructor
            </h2>
            <hr />
            <ReduxForm
              createStaffer={[Function]}
              editStaffer={null}
              fetchStafferInfo={[Function]}
              id="create-staffer-form"
              isCreateForm={true}
              isSaving={false}
              onSubmit={[Function]}
              organizationName=""
              sourceInfo={Object {}}
              stafferInfo={
                Object {
                  "error": Array [
                    "Fail",
                  ],
                  "isSaving": false,
                }
              }
            />
            <StatusAlert
              alertType="danger"
              className=""
              dismissible={false}
              iconClassNames={Array []}
              id="create-staffer-error"
              message={
                Array [
                  "Fail",
                  <br />,
                ]
              }
              onClose={[Function]}
              title={null}
            />
          </div>
        </PageContainer>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <title>
            Create New Instructor
          </title>,
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Create New Instructor",
          },
          "ref": null,
          "rendered": "Create New Instructor",
          "type": "title",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            undefined,
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={
                  Object {
                    "error": Array [
                      "Fail",
                    ],
                    "isSaving": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className=""
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message={
                  Array [
                    "Fail",
                    <br />,
                  ]
                }
                onClose={[Function]}
                title={null}
              />
            </div>,
          ],
          "className": "",
          "wide": false,
        },
        "ref": null,
        "rendered": Array [
          false,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  Create New Instructor
                </h2>,
                <hr />,
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={
                    Object {
                      "error": Array [
                        "Fail",
                      ],
                      "isSaving": false,
                    }
                  }
                />,
                <StatusAlert
                  alertType="danger"
                  className=""
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message={
                    Array [
                      "Fail",
                      <br />,
                    ]
                  }
                  onClose={[Function]}
                  title={null}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Create New Instructor",
                },
                "ref": null,
                "rendered": "Create New Instructor",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "hr",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "createStaffer": [Function],
                  "editStaffer": null,
                  "fetchStafferInfo": [Function],
                  "id": "create-staffer-form",
                  "initialValues": undefined,
                  "isCreateForm": true,
                  "isSaving": false,
                  "onSubmit": [Function],
                  "organizationName": "",
                  "sourceInfo": Object {},
                  "stafferInfo": Object {
                    "error": Array [
                      "Fail",
                    ],
                    "isSaving": false,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alertType": "danger",
                  "className": "",
                  "dismissible": false,
                  "iconClassNames": Array [],
                  "id": "create-staffer-error",
                  "message": Array [
                    "Fail",
                    <br />,
                  ],
                  "onClose": [Function],
                  "title": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <title>
              Create New Instructor
            </title>
          </HelmetWrapper>,
          <PageContainer
            className=""
            wide={false}
          >
            <div>
              <h2>
                Create New Instructor
              </h2>
              <hr />
              <ReduxForm
                createStaffer={[Function]}
                editStaffer={null}
                fetchStafferInfo={[Function]}
                id="create-staffer-form"
                isCreateForm={true}
                isSaving={false}
                onSubmit={[Function]}
                organizationName=""
                sourceInfo={Object {}}
                stafferInfo={
                  Object {
                    "error": Array [
                      "Fail",
                    ],
                    "isSaving": false,
                  }
                }
              />
              <StatusAlert
                alertType="danger"
                className=""
                dismissible={false}
                iconClassNames={Array []}
                id="create-staffer-error"
                message={
                  Array [
                    "Fail",
                    <br />,
                  ]
                }
                onClose={[Function]}
                title={null}
              />
            </div>
          </PageContainer>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <title>
              Create New Instructor
            </title>,
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Create New Instructor",
            },
            "ref": null,
            "rendered": "Create New Instructor",
            "type": "title",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              undefined,
              <div>
                <h2>
                  Create New Instructor
                </h2>
                <hr />
                <ReduxForm
                  createStaffer={[Function]}
                  editStaffer={null}
                  fetchStafferInfo={[Function]}
                  id="create-staffer-form"
                  isCreateForm={true}
                  isSaving={false}
                  onSubmit={[Function]}
                  organizationName=""
                  sourceInfo={Object {}}
                  stafferInfo={
                    Object {
                      "error": Array [
                        "Fail",
                      ],
                      "isSaving": false,
                    }
                  }
                />
                <StatusAlert
                  alertType="danger"
                  className=""
                  dismissible={false}
                  iconClassNames={Array []}
                  id="create-staffer-error"
                  message={
                    Array [
                      "Fail",
                      <br />,
                    ]
                  }
                  onClose={[Function]}
                  title={null}
                />
              </div>,
            ],
            "className": "",
            "wide": false,
          },
          "ref": null,
          "rendered": Array [
            false,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2>
                    Create New Instructor
                  </h2>,
                  <hr />,
                  <ReduxForm
                    createStaffer={[Function]}
                    editStaffer={null}
                    fetchStafferInfo={[Function]}
                    id="create-staffer-form"
                    isCreateForm={true}
                    isSaving={false}
                    onSubmit={[Function]}
                    organizationName=""
                    sourceInfo={Object {}}
                    stafferInfo={
                      Object {
                        "error": Array [
                          "Fail",
                        ],
                        "isSaving": false,
                      }
                    }
                  />,
                  <StatusAlert
                    alertType="danger"
                    className=""
                    dismissible={false}
                    iconClassNames={Array []}
                    id="create-staffer-error"
                    message={
                      Array [
                        "Fail",
                        <br />,
                      ]
                    }
                    onClose={[Function]}
                    title={null}
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Create New Instructor",
                  },
                  "ref": null,
                  "rendered": "Create New Instructor",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "hr",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "createStaffer": [Function],
                    "editStaffer": null,
                    "fetchStafferInfo": [Function],
                    "id": "create-staffer-form",
                    "initialValues": undefined,
                    "isCreateForm": true,
                    "isSaving": false,
                    "onSubmit": [Function],
                    "organizationName": "",
                    "sourceInfo": Object {},
                    "stafferInfo": Object {
                      "error": Array [
                        "Fail",
                      ],
                      "isSaving": false,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "alertType": "danger",
                    "className": "",
                    "dismissible": false,
                    "iconClassNames": Array [],
                    "id": "create-staffer-error",
                    "message": Array [
                      "Fail",
                      <br />,
                    ],
                    "onClose": [Function],
                    "title": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
